syntax = "proto3";

package userProvider;

// Message for creating a new user
message CreateExpertRequest {
  string userName = 1;
  string fullName = 2;
  string password = 3;
  string confirmPassword = 4;
  string phoneNumber = 5;
  string city = 6;
  string remark = 7;

  string createBy = 8; // ID of the admin/user who created this user

  // Privileges
  bool allPrivilege = 9;
  bool addMatchPrivilege = 10;
  bool betFairMatchPrivilege = 11;
  bool bookmakerMatchPrivilege = 12;
  bool sessionMatchPrivilege = 13;
}

// Response after creating a user
message CreateExpertResponse {}

// Service for user management
service UserService {
  rpc CreateExpert(CreateExpertRequest) returns (CreateExpertResponse);
}
